--- a/src/app/modules/daily/daily.component.html
+++ b/src/app/modules/daily/daily.component.html
@@ -1,4 +1,4 @@
-<div class="container flex flex-col gap-4 min-h-screen">
+<div class="container flex flex-col gap-4 min-h-screen select-none">
   <header class="flex gap-2 items-center justify-between">
     <div class="flex gap-2 items-center">
       <img src="icons/icon-72x72.png" alt="">
@@ -9,13 +9,29 @@
     </button>
   </header>
   <!-- <h1 class="text-center font-bold text-2xl">الاذكار اليوميه</h1> -->
-  <span class="block h-2 rounded-full after:rounded-full after:duration-500 bg-neutral-100 after:inset-0 relative after:absolute after:bg-cyan-500 after:w-[var(--width)]" [style]="'--width:'+(step/azkar.length * 100)+'px'"></span>
+  <span
+    class="block h-2 rounded-full after:rounded-full after:duration-500 bg-neutral-100 after:inset-0 relative after:absolute after:bg-cyan-500 after:w-[var(--width)]"
+    [style]="'--width:'+(step/azkar.length * 100)+'%'"></span>
   <div class="h-[70svh] pt-10 max-w-3xl relative text-center mx-auto text-xl font-medium font-hafs">
     @for (item of azkar; track $index) {
       @if(step == $index+1){
         {{item.zikr}}
         @if (item.counter) {
           <span class="font-tag text-9xl font-bold absolute inset-0 flex justify-center items-center text-cyan-600 opacity-40">{{ item.counter - counter+1}}</span>
+        }
+        @if(item.fadl){
+        <br>
+        <br>
+        <br>
+        <span>
+          <span class="text-2xl text-cyan-600">فضل الدعاء</span>
+          <br>
+          <span class="max-w-2xl text-neutral-600">
+            {{item.fadl}}
+        
+          </span>
+        </span>
+
         }
       }
     } 
