--- a/src/app/modules/daily/daily.component.html
+++ b/src/app/modules/daily/daily.component.html
@@ -1,14 +1,13 @@
 <div class="container flex flex-col gap-4 min-h-screen select-none">
   <header class="flex gap-2 items-center justify-between">
     <div class="flex gap-2 items-center">
-      <img src="icons/icon-72x72.png" alt="">
+      <img class="w-20" src="icons/icon-512x512.png" alt="logo">
       <span class="font-bold text-2xl">اذكارك</span>
     </div>
     <button class="btn !rounded-full aspect-square outline" (click)="step=1;save()">
       <sa-icon path="icons/icons.svg#"  icon="home"></sa-icon>
     </button>
   </header>
-  <!-- <h1 class="text-center font-bold text-2xl">الاذكار اليوميه</h1> -->
   <span
     class="block h-2 rounded-full after:rounded-full after:duration-500 bg-neutral-100 after:inset-0 relative after:absolute after:bg-cyan-500 after:w-[var(--width)]"
     [style]="'--width:'+(step/azkar.length * 100)+'%'"></span>
@@ -31,7 +30,6 @@
         
           </span>
         </span>
-
         }
       }
     } 
