--- a/src/app/modules/daily/daily.component.html
+++ b/src/app/modules/daily/daily.component.html
@@ -37,7 +37,7 @@
    </div>
    <div class="flex gap-2 w-2/4 min-w-72 mx-auto">
     <button (click)="decrease()" class="btn outline w-full" [disabled]="step==1">السابق</button>
-    <button (click)="increas()" [disabled]="step == azkar.length" class="btn w-full">التالي</button>
+    <button (click)="increas()" [disabled]="step == azkar.length + 1" class="btn w-full">التالي</button>
    </div>
 
 </div>
